# instant

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  QUICKSTART.md  README.md  go.mod  go.sum  test-integration.sh
agent/: README.md  main.py  planner.py  pyproject.toml
agent/tests/: test_api.py  test_planner.py
client/: README.md  next.config.ts  package.json  prisma.config.ts  tailwind.config.ts
client/app/: globals.css  icon.tsx  layout.tsx  page.tsx
client/app/app/: layout.tsx  page.tsx
client/app/case-study/: page.tsx
client/components/auth/: auth-button.tsx  login-form.tsx  logout-button.tsx  sign-up-form.tsx
client/components/dashboard/: app-sidebar.tsx  command-menu.tsx
client/components/ems/: active-executions-table.tsx  completed-executions-table.tsx  execution-filters.tsx  (+4 more)
client/hooks/: use-mobile.ts
client/lib/: utils.ts
data/: README.md  ingest_security_data.py  ingest_yield_curves_fred.py  seed-app.sh  seed-app.sql  supabase_helper.py
docs/: architecture-diagrams.md  compliance-implementation-spec.md  copilot-command-menu-implementation-spec.md  ems-implementation-spec.md  event-studio-implementation-spec.md  frontend-implementation-spec.md  instant-technical-spec.md  marketdata-implementation-spec.md  oms-implementation-spec.md  pms-implementation-spec.md
infra/temporal/: README.md  temporal-server.service  temporal-worker.service
infra/tui/: README.md  package.json  run.js
integration/: README.md  seed-test-data.sh  seed-test-data.sql  test-integration.sh
services/api/: main.go
services/temporal/: shared.go
(+144 files in other folders)
