[project]
name = "agent"
version = "0.1.0"
description = "AI Agent for Instant - Copilot service with LLM integration"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.127.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
dev = "uvicorn main:app --reload --port 8000"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
